<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MensHostel">

    <Button
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a" />

    <Button
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b" />

    <Button
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c" />

    <Button
        android:id="@+id/d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d" />

    <Button
        android:id="@+id/e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e" />

    <Button
        android:id="@+id/f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f" />

    <Button
        android:id="@+id/g"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/g" />

    <Button
        android:id="@+id/h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/h" />

    <Button
        android:id="@+id/j"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/j" />

    <Button
        android:id="@+id/k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/k" />

    <Button
        android:id="@+id/l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/l" />

    <Button
        android:id="@+id/m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m" />

    <Button
        android:id="@+id/n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n" />

    <Button
        android:id="@+id/p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p" />

    <Button
        android:id="@+id/q"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q" />
</LinearLayout>