<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/vit"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/ab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:background="#ffffff"
        android:text="@string/academic_block" />

    <Button
        android:id="@+id/mh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:background="#ffffff"
        android:text="@string/mens_hostel" />

    <Button
        android:id="@+id/gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:background="#ffffff"
        android:text="@string/womens_hostel" />
</LinearLayout>